fixed wrong margin on ipads

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -30,7 +30,7 @@
 @media only screen and (max-width: 2000px) {
     .container div {
         margin-left: 1rem;
-        margin-right: 2rem;
+        margin-right: 1rem;
     }
 }
 
